--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
   "name": "ts-express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start:dev": "nodemon dist/index.js",
+    "build": "tsc --p tsconfig.json",
     "build:dev": "tsc --watch --preserveWatchOutput",
     "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\"",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts'",
     "prettier:format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prettier:watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}"
+    "prettier:watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
+    "start": "npm run build;pm2 start dist/index.js",
+    "start:dev": "nodemon dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pm2": "^4.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
