--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dev": "concurrently \"npm:build:dev\" \"npm:start:dev\"",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
+    "pm2": "pm2 start dist/index.js",
     "prettier": "prettier --config .prettierrc 'src/**/*.ts'",
     "prettier:format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "prettier:watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
-    "start": "npm run build;pm2 start dist/index.js",
+    "start": "node dist/index.js",
     "start:dev": "nodemon dist/index.js"
   },
   "keywords": [],
