--- a/package.json
+++ b/package.json
@@ -14,30 +14,53 @@
     "prettier:format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "prettier:watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
     "start": "node dist/index.js",
-    "start:dev": "nodemon dist/index.js"
+    "start:dev": "nodemon dist/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "dependencies": {
-    "express": "^4.17.1",
-    "pm2": "^4.4.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.9",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.6.0",
     "eslint-plugin-no-loops": "^0.3.0",
     "husky": "^4.2.5",
+    "jest": "^26.3.0",
     "nodemon": "^2.0.4",
     "onchange": "^7.0.2",
     "prettier": "^2.0.5",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:fix && npm run prettier:format"
+      "pre-commit": "npm run lint:fix && npm run prettier:format && npm run test"
     }
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/__tests__/*.+(ts|tsx|js)"
+    ]
   }
 }
