--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "@types/node": "^14.0.27",
     "express": "^4.17.1"
   },
   "devDependencies": {
